src/styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@200;300;400;500;600;700;800&family=Lexend:wght@400;500;600&family=Space+Grotesk:wght@400;500;600&display=swap');
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  background-color: white;
}

:root, [data-theme] {
  background-color: white;
  color: hsl(var(--bc) / var(--tw-text-opacity, 1));
}

body {
  color: rgb(var(--foreground-rgb));
  background-color: white !important;
  font-family: 'Lexend', sans-serif;

}

/* GLOBAL FONT */
.font-lexend {
  font-family: 'Lexend', sans-serif;
}
.font-kanit {
  font-family: 'Kanit', sans-serif;
}
.font-space {
  font-family: 'Space Grotesk', sans-serif;
}

li > ul {
  transform: translatex(100%) scale(0);
}
li:hover > ul {
  transform: translatex(101%) scale(1);
}
li > button svg {
  transform: rotate(-90deg);
}
li:hover > button svg {
  transform: rotate(-270deg);
}

.swiper {
  width: 100%;
  height: 60vh;
}

.swiper-slide {
  text-align: center;
  font-size: 18px;
  background: #fff;

  /* Center slide text vertically */
  display: flex;
  justify-content: center;
  align-items: center;
}

.swiper-slide img {
  display: block;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

@media screen and (max-width:700px) {
  .swiper{
    height: 15vh;
  }
}

